[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Spawn.gd" type="Script" id=1]

[node name="Spawn" type="Position2D"]
script = ExtResource( 1 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
